Try to fix color on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -62,6 +62,7 @@
         text-align: right;
 
         .menu-icon {
+            color: $text-color;
             display: block;
             float: right;
             width: 36px;
